# logdrain

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/logdrain/: Cargo.toml
crates/logdrain-cli/: Cargo.toml
crates/logdrain-cli/src/: format.rs  input.rs  lib.rs  main.rs
crates/logdrain/benches/: add.rs
crates/logdrain/examples/: scaling.rs  stacktrace.rs
crates/logdrain/src/: cluster.rs  error.rs  lib.rs  mask.rs  miner.rs  options.rs  persistence.rs  similarity.rs  snapshot.rs  tokenize.rs  tree.rs
crates/logdrain/tests/: concurrency.rs  kafka_backend.rs  properties.rs  realdata.rs  redis_backend.rs
examples/: basic.rs  highvolume.rs  stacktrace.rs
