[workspace]
resolver = "2"
members = ["crates/logdrain"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/USER/logdrain"
authors = ["logdrain authors"]

[workspace.dependencies]
regex = "1"
rustc-hash = "2"
dashmap = "6"
lru = "0.12"
smallvec = "1"
serde = { version = "1", features = ["derive", "rc"] }  # "rc" so Arc<str> in Options serializes
bincode = "1.3"
thiserror = "2"
