[package]
name = "logdrain-cli"
version = "0.1.1"
description = "Command-line log-template miner (ships the `logdrain` binary)"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "logdrain"
path = "src/main.rs"
doc = false  # avoid rustdoc output collision with the `logdrain` library crate

[dependencies]
logdrain = { path = "../logdrain", version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "alloc"] }
