[package]
name = "logdrain"
version = "0.2.0"
description = "Online Drain3 log-template mining with path-preserving tokenization"
readme = "README.md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
regex.workspace = true
rustc-hash.workspace = true
dashmap.workspace = true
smallvec.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "add"
harness = false

# Examples are auto-discovered from `examples/`.
